--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-intersection-observer": "^9.13.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.25.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
